8.6. Exercises sorting using Interfaces and Polymorphism done